<resources>
    <string name="app_name">Kodable</string>
    <string name="author">By: Phillip Moreno</string>
    <string name="begin">Tap the Start Button to Begin!</string>
    <string name="beginner">Beginner</string>
    <string name="Child"></string>
    <string name="choose">Choose your Fuzz character!</string>
    <string name="correct">You have successfully logged in</string>
    <string name="difficulty">Select your level of difficulty</string>
    <string name="experienced">Experienced</string>
    <string name="hint1">&#160;Email</string>
    <string name="hint2">&#160;Password</string>
    <string name="hint3">&#160;First Name</string>
    <string name="hint4">&#160;Last Name</string>
    <string name="hint5">&#160;D.O.B (MM/DD/YYYY)</string>
    <string name="incorrect">Incorrect email or password</string>
    <string name="login">Play Now</string>
    <string name="login2">Parent Login</string>
    <string name="logout2">Logout</string>
    <string name="moveCorrect">Great move! +10 points</string>
    <string name="moveIncorrect">Oops try again! -10 points</string>
    <string name="moveUnfinished">Oops! you must use all the arrows</string>
    <string name="onBackPressed">You cannot go back once quiz has started</string>
    <string name="onBackPressedHS">Back is not a valid option</string>
    <string name="or">OR</string>
    <string name="Parent"></string>
    <string name="pause">PAUSED</string>
    <string name="play">Got it!</string>
    <string name="playAgain">Play Again!</string>
    <string name="retToLog">Return To Login</string>
    <string name="register">Register</string>
    <string name="register2">Parent Registration</string>
    <string name="register3">Next Page</string>
    <string name="register4">Child Registration</string>
    <string name="register5">Complete Registration</string>
    <string name="regSuccess">Registration Successful</string>
    <string name="rules">Quiz Rules</string>
    <string name="s1">Score 1</string>
    <string name="s2">Score 2</string>
    <string name="s3">Score 3</string>
    <string name="s4">Score 4</string>
    <string name="s5">Score 5</string>
    <string name="s6">Score 6</string>
    <string name="sh">Score History</string>
    <string name="submit">Submit</string>
    <string name="who">Who is playing?</string>
    <string name="start">Objective</string>
    <string name="start2">Start</string>
    <string name="st1">Stage 1</string>
    <string name="st2">Stage 2</string>
    <string name="st3">Stage 3</string>
    <string name="quit">Exit</string>
    <string name="resume">Resume</string>
    <string name="userOption">What would you like to do?</string>
    <string name="menu">Menu</string>
    <string name="instructions1">Get your fuzz character to the finish line with the least steps possible!</string>
    <string name="replay">Replay</string>
    <string name="logout">You have successfully logged out</string>
    <string name="next">Next Level</string>
    <string name="complete1">Stage Cleared!</string>
    <string name="complete2">All Stages Cleared!</string>
    <string name="chooseCharacter">Please choose a Fuzz character!</string>
    <string name="cantGoBack">You cannot go back once you have logged in, unless you log out</string>
</resources>
