<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient5"
    tools:context=".RegistrationChild">

    <!-- EditText added to input user first name -->

    <!-- EditText added to input user last name -->

    <Button
        android:id="@+id/completeRegistration"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button1_border"
        android:fontFamily="@font/acme"
        android:onClick="completeRegistration"
        android:text="@string/register5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/childLastName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textview1_border"
        android:drawableStart="@drawable/ic_face_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/hint4"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childFirstName" />

    <!-- EditText added to input user date of birth -->
    <EditText
        android:id="@+id/childDateOfBirth"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textview1_border"
        android:drawableStart="@drawable/ic_date_range_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/hint5"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childLastName" />

    <!-- EditText added to input user email -->

    <!-- EditText added to input user password -->

    <!-- TextView added to display page name -->
    <EditText
        android:id="@+id/childFirstName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/textview1_border"
        android:drawableStart="@drawable/ic_face_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/hint3"
        android:importantForAutofill="no"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childRegistrationHeaderTV" />


    <!-- Button added to complete registration -->
    <TextView
        android:id="@+id/childRegistrationHeaderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/acme"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="7"
        android:text="@string/register4"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="158dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childDateOfBirth"
        app:srcCompat="@drawable/kodable_splash" />
</androidx.constraintlayout.widget.ConstraintLayout>